// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text Should display content with default classnames 1`] = `
<div>
  <p
    class="font-ibmPlex-sans text-semantic-typography-prominent text-semantic-body-md space-y-semantic-paragraphSpacing-body-md leading-semantic-body-md font-core-regular"
  >
    Text content
  </p>
</div>
`;

exports[`Text Should have correct classnames with size xl 1`] = `
<div>
  <p
    class="font-ibmPlex-sans text-semantic-typography-prominent text-semantic-body-xl space-y-semantic-paragraphSpacing-body-xl leading-semantic-body-xl font-core-regular"
  >
    Text content
  </p>
</div>
`;

exports[`Text Should have correct classnames with size xl and type underline 1`] = `
<div>
  <p
    class="font-ibmPlex-sans text-semantic-typography-prominent text-semantic-body-xl space-y-semantic-paragraphSpacing-body-xl leading-semantic-body-xl font-core-regular underline"
  >
    Text content
  </p>
</div>
`;
